# eqtune

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs
resources/: Info.plist
shim/: tap_shim.h  tap_shim.m
src/: config.rs  daemon.rs  dsp.rs  ipc.rs  launchd.rs  lib.rs  main.rs  sys.rs
