[package]
name = "eqtune"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

[build-dependencies]
cc = "1.2.63"
