[package]
name = "eqtune"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A lightweight, system-wide audio equalizer for macOS, built on Core Audio process taps."
license = "MIT OR Apache-2.0"
repository = "https://github.com/y7nieSEl5/eqtune"
readme = "README.md"
keywords = ["audio", "equalizer", "macos", "coreaudio", "eq"]
categories = ["multimedia::audio", "command-line-utilities"]

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin"]

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.9.1"
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2.186"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

[build-dependencies]
cc = "1.2.63"
